L2j Freya release. Changelog will be posted later on forum.
git-svn-id: http://svn.l2jserver.com/trunk@4417 d34dfa0f-f91c-0410-86dd-cf06f19dd0ad